; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_name.c_namecmp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_name.c_namecmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_COLLATION_OID = common dso_local global i64 0, align 8
@NAMEDATALEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i64)* @namecmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @namecmp(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @C_COLLATION_OID, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @NameStr(i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @NameStr(i32 %16)
  %18 = load i32, i32* @NAMEDATALEN, align 4
  %19 = call i32 @strncmp(i32 %14, i32 %17, i32 %18)
  store i32 %19, i32* %4, align 4
  br label %37

20:                                               ; preds = %3
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @NameStr(i32 %22)
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @NameStr(i32 %25)
  %27 = call i32 @strlen(i32 %26)
  %28 = load i32*, i32** %6, align 8
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @NameStr(i32 %29)
  %31 = load i32*, i32** %6, align 8
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @NameStr(i32 %32)
  %34 = call i32 @strlen(i32 %33)
  %35 = load i64, i64* %7, align 8
  %36 = call i32 @varstr_cmp(i32 %23, i32 %27, i32 %30, i32 %34, i64 %35)
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %20, %11
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @strncmp(i32, i32, i32) #1

declare dso_local i32 @NameStr(i32) #1

declare dso_local i32 @varstr_cmp(i32, i32, i32, i32, i64) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
